<resources>
    <string name="app_name">MyKumve</string>
    <string-array name="locations_array">
        <item>Ramat HaGolan</item>
        <item>Galilee</item>
        <item>Jezreel Valley</item>
        <item>Tiberias</item>
        <item>Haifa</item>
        <item>Sharon</item>
        <item>Central District</item>
        <item>Shfela</item>
        <item>Jerusalem</item>
        <item>Negev</item>
        <item>Arava</item>
    </string-array>
    <string name="difficulty_unset">Unset</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>

    <string name="welcome_user">Welcome, %1$s</string>
    <string name="please_log_in">Please log in</string>
    <string name="registration_successful">Registration successful</string>
    <string name="login_failed">Login failed</string>
    <string name="login_successful">Login successful</string>

    <string name="north">North</string>
    <string name="upper_galilee">Upper Galilee, Finger of the Galilee and Golan</string>
    <string name="western_galilee">Western Galilee</string>
    <string name="haifa_and_carmel">Haifa and Carmel</string>
    <string name="lower_galilee">Lower Galilee, Valleys and Gilboa</string>
    <string name="center">Center</string>
    <string name="sharon">Sharon</string>
    <string name="shfela">Shfela</string>
    <string name="samaria">Samaria</string>
    <string name="coastal_plain_and_gush_dan">Coastal Plain and Gush Dan</string>
    <string name="jerusalem_and_surroundings">Jerusalem and Surroundings</string>
    <string name="jerusalem_hills_and_beit_shemesh">Jerusalem Hills and Beit Shemesh Area</string>
    <string name="jerusalem">Jerusalem</string>
    <string name="south">South</string>
    <string name="dead_sea_and_judean_desert">Dead Sea and Judean Desert</string>
    <string name="northern_negev">Northern Negev</string>
    <string name="central_negev_and_craters">Central Negev and the Craters</string>
    <string name="southern_negev_and_eilat_mountains">Southern Negev and Eilat Mountains</string>

    <string name="welcome_when_my_trips_empty">Your Trips List is empty\n\nStart planning your trip - click the plus icon\n\nYou can also explore trips and join them!\n</string>
    <string name="error_empty_name">Name must be at least 3 characters</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_password">Password must be at least 6 characters</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_db_confirmation">Are you sure you want to delete db?</string>

    <string name="error_invalid_phone">Invalid format: Phone number must start with 0 followed by 9 digits. Example: 0541111111.</string>
    <string name="api_key_placeholder" translatable="false">YOUR_API_KEY_HERE</string>
    <string name="register">Register</string>
    <string name="trip_partner_list_title">Partners List</string>
    <string name="title_is_required">Title is required</string>
    <string name="notifications">Notifications</string>
    <string name="show_invitations">Show Invitations</string>

    <string-array name="difficulty_options">
        <item>@string/difficulty_unset</item>
        <item>@string/difficulty_easy</item>
        <item>@string/difficulty_medium</item>
        <item>@string/difficulty_hard</item>
    </string-array>

    <string-array name="area_options">
        <item>North</item><!-- Title item -->
        <item>@string/upper_galilee</item>
        <item>@string/western_galilee</item>
        <item>@string/haifa_and_carmel</item>
        <item>@string/lower_galilee</item>
        <item>Center</item><!-- Title item -->
        <item>@string/sharon</item>
        <item>@string/shfela</item>
        <item>@string/samaria</item>
        <item>@string/coastal_plain_and_gush_dan</item>
        <item>Jerusalem and Surroundings</item> <!-- Title item -->
        <item>@string/jerusalem_hills_and_beit_shemesh</item>
        <item>@string/jerusalem</item>
        <item>South</item> <!-- Title item -->
        <item>@string/dead_sea_and_judean_desert</item>
        <item>@string/northern_negev</item>
        <item>@string/central_negev_and_craters</item>
        <item>@string/southern_negev_and_eilat_mountains</item>
    </string-array>
    <string name="unknown_area">unkown area</string>
    <string name="trip_invitation_list_title">Invitation List</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="password_changed_successfully">Password changed successfully</string>

    <string name="my_profile">My Profile</string>
    <string name="my_alerts">My Alerts</string>
    <string name="log_out">Log Out</string>
    <string name="delete_db">Delete DB</string>
    <string name="explore">Explore</string>
    <string name="my_trips">My Trips</string>
    <string name="live_reports">Live Reports</string>
    <string name="add_to_my_trips">add to my trips</string>
    <string name="close">Close</string>
    <string name="set_a_trip">SET A TRIP</string>
    <string name="add_a_picture_to_specify_your_trip_group">Add a picture to specify your trip/group</string>
    <string name="name_your_trip">Name your trip</string>
    <string name="define_your_trip_here">Define your trip here</string>
    <string name="the_trip_starts_at">The trip starts at:</string>
    <string name="and_will_end_by">And will end by:</string>
    <string name="list_the_items_needed_for_the_trip">List the items needed for the trip</string>
    <string name="invite_group_members">Invite group members</string>
    <string name="save">Save</string>
    <string name="participants">Participants</string>
    <string name="equipement">Equipement</string>
    <string name="choose_a_route">CHOOSE A ROUTE</string>
    <string name="add_report">Add Report</string>
    <string name="no_reports_to_show_n_n_n_if_you_see_something_worth_reporting_n_like_a_pretty_bird_or_heavy_traffic_n_please_add_a_report">No Reports to show\n\n\n If you see something worth reporting\n like a pretty bird or heavy traffic\n please - add a report!</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="choose_a_password_at_least_6_chars">Choose a Password (at least 6 chars)</string>
    <string name="upload_your_profile_picture">Upload your profile picture</string>
    <string name="user_password">user password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_in_kumve">Not in Kumve?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="equipment">Equipment</string>
    <string name="change_password">Change Password</string>
    <string name="previous_password">Previous Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="cancel">Cancel</string>
    <string name="report_now">Report Now</string>
    <string name="report_description">Report Description</string>
    <string name="unkown_reporter">Unknown reporter</string>
    <string name="reported_by">Reported by</string>
</resources>