<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_ein_halon"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterManager">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:hint="@string/full_name"
        android:textColorHint="@color/royalBlue"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="#FF0000"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/royalBlue"
        app:startIconDrawable="@drawable/full_name_vector"
        app:startIconTint="@color/royalBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/royalBlue"
            android:inputType="text"
            android:textSize="17sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:hint="@string/email"
        android:textColorHint="@color/royalBlue"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="#FF0000"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/royalBlue"
        app:startIconDrawable="@drawable/email_vector"
        app:startIconTint="@color/royalBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/royalBlue"
            android:inputType="textEmailAddress"
            android:textSize="17sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:hint="@string/phone_number"
        android:textColorHint="@color/royalBlue"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="#FF0000"
        app:boxStrokeWidth="2dp"
        app:hintTextColor="@color/royalBlue"
        app:startIconDrawable="@drawable/phone_number_vector"
        app:startIconTint="@color/royalBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789+"
            android:inputType="phone"
            android:textColor="@color/royalBlue"
            android:textSize="17sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:alpha="0.8"
        android:hint="@string/choose_a_password_at_least_6_chars"
        android:textColorHint="@color/royalBlue"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:boxStrokeColor="@color/white"
        app:boxStrokeErrorColor="#FF0000"
        app:boxStrokeWidth="2dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/royalBlue"
        app:hintTextColor="@color/royalBlue"
        app:startIconDrawable="@drawable/password_icon"
        app:startIconTint="@color/royalBlue">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/royalBlue"
            android:imeOptions="actionDone"
            android:textSize="17sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        app:cardCornerRadius="100dp">

        <ImageButton
            android:id="@+id/image_person_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:padding="30dp"
            android:background="@drawable/fully_rounded_corner_btn"
            android:scaleType="fitXY"
            android:src="@drawable/add_photo_vector">

        </ImageButton>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:gravity="center"
        android:text="@string/upload_your_profile_picture"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <android.widget.Button
        android:id="@+id/Register_Btn"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/gradient_background_grey_to_royalblue"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>